# CSSL3

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DIAGNOSTIC_INFRA_PLAN.md  HANDOFF_NEXT_SESSION.md  HANDOFF_SESSION_1.csl  HANDOFF_SESSION_2.csl  HANDOFF_SESSION_3.csl  HANDOFF_SESSION_4.csl  HANDOFF_v1.1_to_PHASE_J.csl  HANDOFF_v1_to_PHASE_I.csl  LICENSE.md  MNEME_README.md  NOTICE.md  PHASE_J_HANDOFF.csl  PRIME_DIRECTIVE.md  README.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.md  SECURITY.md  SESSION_11_DISPATCH_PLAN.md  SESSION_12_DISPATCH_PLAN.md  SESSION_12_TEAM_DISCIPLINE.md  SESSION_1_HANDOFF.md  SESSION_6_DISPATCH_PLAN.md  SESSION_7_DISPATCH_PLAN.md  dist-build.sh  setup.bat
compiler-rs/: .gitignore  Cargo.toml  qhdc-context.txt  rust-toolchain.toml  rustfmt.toml
compiler-rs/crates/cssl-ai-behav/: Cargo.toml
compiler-rs/crates/cssl-analytics-aggregator/: Cargo.toml
compiler-rs/crates/cssl-anim/: Cargo.toml
compiler-rs/crates/cssl-anim-procedural/: Cargo.toml
compiler-rs/crates/cssl-asset/: Cargo.toml
compiler-rs/crates/cssl-asset-fetcher/: Cargo.toml
compiler-rs/crates/cssl-ast/: Cargo.toml
compiler-rs/crates/cssl-audio-mix/: Cargo.toml
compiler-rs/crates/cssl-autodiff/: Cargo.toml
compiler-rs/crates/cssl-caps/: Cargo.toml
compiler-rs/crates/cssl-cas/: Cargo.toml
compiler-rs/crates/cssl-cgen-cpu-cranelift/: Cargo.toml
compiler-rs/crates/cssl-cgen-cpu-x64/: Cargo.toml
compiler-rs/crates/cssl-cgen-dxil/: Cargo.toml
compiler-rs/crates/cssl-cgen-gpu-dxil/: Cargo.toml
compiler-rs/crates/cssl-cgen-gpu-dxil-wgsl/: Cargo.toml
compiler-rs/crates/cssl-cgen-gpu-msl/: Cargo.toml
compiler-rs/crates/cssl-cgen-gpu-spirv/: Cargo.toml
compiler-rs/crates/cssl-cgen-gpu-wgsl/: Cargo.toml
compiler-rs/crates/cssl-cgen-msl/: Cargo.toml
compiler-rs/crates/cssl-cgen-spirv/: Cargo.toml
compiler-rs/crates/cssl-cgen-wgsl/: Cargo.toml
compiler-rs/crates/cssl-consent/: Cargo.toml
compiler-rs/crates/cssl-content-moderation/: Cargo.toml
compiler-rs/crates/cssl-content-package/: Cargo.toml
compiler-rs/crates/cssl-content-rating/: Cargo.toml
compiler-rs/crates/cssl-content-remix/: Cargo.toml
compiler-rs/crates/cssl-content-subscription/: Cargo.toml
compiler-rs/crates/cssl-effects/: Cargo.toml
compiler-rs/crates/cssl-effects-row/: Cargo.toml
compiler-rs/crates/cssl-elab/: Cargo.toml
compiler-rs/crates/cssl-error/: Cargo.toml
compiler-rs/crates/cssl-examples/: Cargo.toml
compiler-rs/crates/cssl-fractal-amp/: ATTESTATION.csl  Cargo.toml
compiler-rs/crates/cssl-futamura/: Cargo.toml
compiler-rs/crates/cssl-gaze-collapse/: Cargo.toml
compiler-rs/crates/cssl-grades/: Cargo.toml
compiler-rs/crates/cssl-hdc/: Cargo.toml
compiler-rs/crates/cssl-health/: Cargo.toml
compiler-rs/crates/cssl-hgraph/: Cargo.toml
compiler-rs/crates/cssl-hir/: Cargo.toml
compiler-rs/crates/cssl-host-agent-loop/: Cargo.toml
compiler-rs/crates/cssl-host-akashic-records/: Cargo.toml
compiler-rs/crates/cssl-host-akashic-shrine/: Cargo.toml
compiler-rs/crates/cssl-host-alien-materialization/: Cargo.toml
compiler-rs/crates/cssl-host-asset-bundle/: Cargo.toml
compiler-rs/crates/cssl-host-asset-loader/: Cargo.toml
compiler-rs/crates/cssl-host-attestation/: Cargo.toml
compiler-rs/crates/cssl-host-audio/: Cargo.toml
compiler-rs/crates/cssl-host-audit/: Cargo.toml
compiler-rs/crates/cssl-host-battle-pass/: Cargo.toml
compiler-rs/crates/cssl-host-causal-seed/: Cargo.toml
compiler-rs/crates/cssl-host-cocreative/: Cargo.toml
compiler-rs/crates/cssl-host-coder-runtime/: Cargo.toml  SECURITY.md
compiler-rs/crates/cssl-host-coherence-proof/: Cargo.toml
compiler-rs/crates/cssl-host-combat-loop/: Cargo.toml
compiler-rs/crates/cssl-host-combat-sim/: Cargo.toml
compiler-rs/crates/cssl-host-config/: Cargo.toml
compiler-rs/crates/cssl-host-craft-graph/: Cargo.toml
compiler-rs/crates/cssl-host-crystallization/: Cargo.toml
compiler-rs/crates/cssl-host-d3d12/: Cargo.toml
compiler-rs/crates/cssl-host-digital-intelligence-render/: Cargo.toml
compiler-rs/crates/cssl-host-dm/: Cargo.toml
compiler-rs/crates/cssl-host-dm-procgen-bridge/: Cargo.toml
compiler-rs/crates/cssl-host-dmgm-specialists/: Cargo.toml
compiler-rs/crates/cssl-host-fab-procgen/: Cargo.toml
compiler-rs/crates/cssl-host-fps-feel/: Cargo.toml
compiler-rs/crates/cssl-host-frame-recorder/: Cargo.toml
compiler-rs/crates/cssl-host-gacha/: Cargo.toml
compiler-rs/crates/cssl-host-gear-archetype/: Cargo.toml
compiler-rs/crates/cssl-host-gm/: Cargo.toml
compiler-rs/crates/cssl-host-golden/: Cargo.toml
compiler-rs/crates/cssl-host-handoff-protocol/: Cargo.toml
compiler-rs/crates/cssl-host-histograms/: Cargo.toml
compiler-rs/crates/cssl-host-historical-reconstructor/: Cargo.toml
compiler-rs/crates/cssl-host-home-dimension/: Cargo.toml
compiler-rs/crates/cssl-host-hotfix-stream/: Cargo.toml
compiler-rs/crates/cssl-host-input/: Cargo.toml
compiler-rs/crates/cssl-host-input-virtual/: Cargo.toml
compiler-rs/crates/cssl-host-integration-tests/: Cargo.toml
compiler-rs/crates/cssl-host-intent-translation/: Cargo.toml
compiler-rs/crates/cssl-host-kan-real/: Cargo.toml
compiler-rs/crates/cssl-host-kan-substrate-bridge/: Cargo.toml
compiler-rs/crates/cssl-host-level-zero/: Cargo.toml
compiler-rs/crates/cssl-host-license-attribution/: Cargo.toml
compiler-rs/crates/cssl-host-llm-bridge/: Cargo.toml
compiler-rs/crates/cssl-host-loot/: Cargo.toml
compiler-rs/crates/cssl-host-many-worlds/: Cargo.toml
compiler-rs/crates/cssl-host-metal/: Cargo.toml
compiler-rs/crates/cssl-host-movement-aug/: Cargo.toml
compiler-rs/crates/cssl-host-mp-transport/: Cargo.toml
compiler-rs/crates/cssl-host-mp-transport-real/: Cargo.toml
compiler-rs/crates/cssl-host-multiplayer-signaling/: Cargo.toml
compiler-rs/crates/cssl-host-mycelium-desktop/: Cargo.toml  tauri.conf.json
compiler-rs/crates/cssl-host-mycelium-heartbeat/: Cargo.toml
compiler-rs/docs/: loa_scene_compat_matrix.md
(+2779 files in other folders)
