# CSSLv3 stage0 compiler workspace
# ══════════════════════════════════════════════════════════════════
# § I> stage0 = Rust-hosted throwaway per §§ 01_BOOTSTRAP
# § I> self-host stage1 pending per §§ 14_BACKEND + §§ 19_FUTAMURA3
# § I> crate-split per §§ HANDOFF_SESSION_1 TASK-MAP T1
# § I> PRIME-DIRECTIVE encoded-structurally ← §§ SYNTHESIS_V2 + §§ 11_IFC + §§ 04_EFFECTS + §§ 22_TELEMETRY
# § I> deny(unsafe_code) via per-crate #![forbid(unsafe_code)] inner-attr (FFI-crates opt-allow)
# § I> spec-authority : if code diverges from ../specs/, specs win • file code-bug

[workspace]
resolver = "2"
members = ["crates/*"]
# § S6-A0 (T11-D51) : cssl-playground is untracked WIP introduced post-session-5 ;
# excluded from workspace to keep parallel-fanout commit-gate green. Re-add to
# workspace once playground builds clippy/test/doc clean.
#
# § META-WAVE-3-PRELUDE (T11-D113..T11-D137) : the `members = ["crates/*"]` glob
# auto-picks-up the three confirmed wave-3β-landing crates as their slice-agents
# land their crate skeletons :
#   • cssl-pga      ← T11-D134 (W3β-09 ; cssl/session-11/T11-D134-cssl-pga-crate) ✓ landed
#   • cssl-wavelet  ← T11-D135 (W3β-10 ; cssl/session-11/T11-D135-cssl-wavelet-crate) ✓ landed
#   • cssl-hdc      ← T11-D136 (W3β-11 ; cssl/session-11/T11-D136-cssl-hdc-crate) ✓ landed
# Substrate-evolution crates (D113..D125 : cssl-substrate-omega-field, cssl-wave-solver,
# cssl-kan, cssl-host-openxr, cssl-spectral-render, cssl-render-v2, cssl-physics-wave,
# cssl-wave-audio, cssl-anim-procedural, cssl-creature-behavior, cssl-ui-vr) are
# DEFERRED — orchestrator merges per-slice crate-skeleton commits as they land.
# No explicit member-list entries here ; the glob is sufficient.
#
# § META-WAVE-3γ (T11-D138..T11-D144) : dependent gap-fill block. The glob
# auto-picks-up :
#   • cssl-substrate-omega-field ← T11-D144 (W3γ-07 ; NEW crate ; lifts D113 deferral)
# D138..D142 are pure compiler-internals (sigma-enforce / GPU-AD / call+CFG-AD /
# comptime-eval / specialization) and modify EXISTING crates (cssl-effects /
# cssl-cgen-gpu-spirv / cssl-mir / cssl-hir / cssl-mir respectively) — no new
# member required. D143 extends cssl-substrate-kan (D115-deferred ; D143 may
# create the skeleton if D115 has not landed by then). No explicit member-list
# edits required for wave-3γ ; the glob discovers cssl-substrate-omega-field
# automatically once its skeleton lands.
#
# § META-WAVE-4 (T11-D114 + T11-D116..T11-D125) : substrate-evolution +
# signature-rendering block. The `members = ["crates/*"]` glob auto-picks-up
# 8 NEW crates as their slice-agents land their crate skeletons :
#   • cssl-wave-solver     ← T11-D114  (W4-01 ; cssl/session-11/T11-D114-wave-solver) — IF-LBM substrate-flow
#   • cssl-render-v2       ← T11-D116  (W4-02 ; cssl/session-11/T11-D116-render-v2-sdf) — SDF raymarcher (D119+D121+D122 extend)
#   • cssl-physics-wave    ← T11-D117  (W4-03 ; cssl/session-11/T11-D117-physics-wave) — SDF-collision + XPBD-GPU
#   • cssl-spectral-render ← T11-D118  (W4-04 ; cssl/session-11/T11-D118-spectral-render) — Hyperspectral KAN-BRDF
#   • cssl-gaze-collapse   ← T11-D120  (W4-06 ; cssl/session-11/T11-D120-gaze-collapse) — observer-collapse oracle
#   • cssl-host-openxr     ← T11-D124  (W4-10 ; cssl/session-11/T11-D124-openxr-host) — VR/AR substrate-portal
#   • cssl-anim-procedural ← T11-D125a (W4-11 ; cssl/session-11/T11-D125a-anim-procedural) — procedural-anim curves
#   • cssl-wave-audio      ← T11-D125b (W4-12 ; cssl/session-11/T11-D125b-wave-audio) — wave-substrate-coupled synth
# D119 (fractal-amplifier) + D121 (companion-perspective) + D122 (mise-en-abyme)
# are EXTENSIONS to cssl-render-v2 (no new crate) ; D123 (work-graph pipeline)
# extends cssl-host-vulkan + cssl-host-d3d12 (no new crate). External
# workspace.dependencies (e.g. openxr for D124, palette for D118, cpal for D125b)
# are added by per-slice agent-merges, NOT by the integration slice. The glob
# is sufficient ; no explicit member-list edits required for wave-4.
exclude  = ["crates/cssl-playground"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "Apache-2.0 OR MIT"
authors      = ["Apocky <apocky13@gmail.com>"]
repository   = "https://github.com/Apocky/CSSL3"
homepage     = "https://cssl.dev"

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# noisy-in-scaffold allowances (tighten post-T3 API stabilization ; see T1-D6) :
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
missing_const_for_fn    = "allow"
too_many_lines          = "allow"
doc_markdown            = "allow"  # CSSLv3 / SPIR-V / MLIR / DXIL un-ticked in scaffold-docs
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_lossless           = "allow"
default_trait_access    = "allow"
unreadable_literal      = "allow"
derive_partial_eq_without_eq = "allow"  # f32/f64-containing structs can't derive Eq (NaN)
# T11-D20 toolchain-bump (1.75 → 1.85) surfaced newer clippy lints on pre-existing docstrings + code-patterns.
# Tightening these would be a separate docstring-polish slice ; allowed here to keep the bump surgical.
doc_lazy_continuation     = "allow"  # § → indented-bullet not recognized as continuation by newer clippy
too_long_first_doc_paragraph = "allow"  # scaffold-module docs have rich first-para summaries
const_is_empty            = "allow"  # assert!(!STAGE0_SCAFFOLD.is_empty()) — trivially-true guard-rail
needless_lifetimes        = "allow"  # explicit lifetimes preserved for readability in parser/HIR walkers
single_match_else         = "allow"  # match-else reads clearer than if-let-else for some pattern discriminations
needless_pass_by_ref_mut  = "allow"  # many walker fns take &mut self for future extension even if current body reads-only
or_fun_call               = "allow"  # unwrap_or(String::new()) patterns preserved for readability
use_self                  = "allow"  # scaffolding prefers fully-qualified type names for discoverability
literal_string_with_formatting_args = "allow"  # CSLv3-notation strings contain {} that aren't format-args
assigning_clones          = "allow"  # x = y.clone() preserved vs y.clone_from(&x) for readability
missing_fields_in_debug   = "allow"  # JitModule Debug intentionally elides internal Cranelift state
needless_pass_by_value    = "allow"  # closures passed by value in builder-pattern APIs

[workspace.lints.rust]
rust_2018_idioms = "warn"
unreachable_pub  = "warn"

# ══════════════════════════════════════════════════════════════════
# § WORKSPACE-DEPS : declared-once, inherited-via workspace.dependencies
#   ∀ crate uses `foo.workspace = true` in [dependencies]
#   versions pinned conservative to MSRV-1.75 compat
#   T<N>-verified marks surface below @ build-resolution-time
# ══════════════════════════════════════════════════════════════════
[workspace.dependencies]
# ─ frontend (T2/T3) ─
logos    = "0.14"
chumsky  = "0.10"
lasso    = "0.7"
# ─ shared data ─
smallvec  = { version = "1", features = ["union", "const_generics"] }
indexmap  = "2"
bitflags  = { version = "2", features = ["serde"] }
bytemuck  = { version = "1", features = ["derive"] }
# ─ diagnostics ─
miette              = { version = "7", features = ["fancy"] }
thiserror           = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
# ─ SMT (T9) ─
z3 = { version = "0.12", default-features = false }
# cvc5-sys    = "..." # T9 : verify-registry
# klee-sys    = "..." # T9 : verify-registry
# ─ MLIR (T6) ─
# melior     = "0.20"  # T6 : verify-melior-windows-compat + LLVM_SYS_*_PREFIX
# mlir-sys   = "0.3"
# ─ codegen CPU (T10) ─
cranelift-codegen   = "0.115"
cranelift-frontend  = "0.115"
cranelift-module    = "0.115"
cranelift-object    = "0.115"
cranelift-jit       = "0.115"
cranelift-native    = "0.115"
# ─ codegen GPU (T10) ─
rspirv        = "0.12"
spirv-tools   = "0.12"
# ─ hw/host (T10) ─
ash = "0.38"
# § T11-D62 (S6-E5) : level-zero-sys is NOT on crates.io as of toolchain 1.85.0.
# CSSLv3's L0 host backend rolls its own FFI via libloading (dynamic-load of
# `libze_loader.so` / `ze_loader.dll`) — matches the §§ 14 BACKEND stage1+
# "owned FFI (volk-like dispatch)" trajectory and avoids 3rd-party crate-risk.
# Upper-bound at 0.8.6 : 0.8.7+ requires `dlltool.exe` on Windows MSVC for
# libstd-targeting which is not present in this environment ; older 0.8.x
# versions use the Rust-native windows-sys path that compiles cleanly.
libloading = ">=0.8.0, <0.8.7"
windows = { version = "0.58", features = ["Win32_Foundation"] }
wgpu    = "23"
# T11-D32 : shader validator — WGSL parse + validate. naga version pinned to
# match wgpu 23's internal naga for API compatibility.
naga    = { version = "23", features = ["wgsl-in"] }
# metal crate mac-only : added per-target-cfg @ T10
# ─ crypto (R18 audit-chain, T11 + T11-D131 wave-3β-06 real-crypto-wire) ─
# § META-WAVE-3-PRELUDE : T11-D131 (W3β-06) lifts these from MOCK (cssl-crypto-stub
# pre-wave-3β) to REAL wire. Lower-bounds tightened to specific minor-versions to
# guarantee API surfaces D131 depends on (BLAKE3 keyed-mode + Ed25519 batch-verify).
# Upper-bound left open ; toolchain-bump slice will pin if breakage surfaces.
blake3         = ">=1.5"
ed25519-dalek  = { version = ">=2.1", features = ["rand_core"] }
rand           = { version = "0.8", features = ["std"] }
# Pin cpufeatures to the last 1.75-compatible version (0.3.0 requires edition2024).
cpufeatures    = "=0.2.17"
# ─ serde / config ─
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
# ─ concurrency ─
parking_lot = "0.12"
crossbeam   = "0.8"
# ─ testing / property (T11) ─
proptest = "1"
insta    = "1"
# ─ bench (T11) ─
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.metadata.cssl]
prime_directive  = "consent=OS • violation=bug • no-override-exists"
spec_root        = "../specs"
research_root    = "../research"
stage            = "0"
stage_note       = "Rust-hosted scaffold per §§ 01_BOOTSTRAP • stage1-self-host pending"
msrv_rationale   = "1.75 = workspace-lints-stable + resolver-2 mature"
ci_faithful_to   = "§§ 23_TESTING oracle-modes + differential-backends"
decisions_log    = "../DECISIONS.md"
