[package]
name                   = "cssl-asset"
description            = "CSSLv3 stage0 — game-asset pipeline (PNG / GLTF / WAV / TTF parsers + AssetHandle + watcher scaffold)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
