[package]
name                   = "cssl-ast"
description            = "CSSLv3 stage0 — concrete syntax tree + source-preserving forms"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lints]
workspace = true
