[package]
name                   = "cssl-caps"
description            = "CSSLv3 stage0 — Pony-6 capability checker + Vale gen-refs"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lints]
workspace = true
