[package]
name                   = "cssl-cgen-cpu-cranelift"
description            = "CSSLv3 stage0 — Cranelift-based CPU codegen (stage0 throwaway)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir           = { path = "../cssl-mir" }
thiserror          = { workspace = true }
cranelift-codegen  = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module   = { workspace = true }
cranelift-jit      = { workspace = true }
cranelift-native   = { workspace = true }
cranelift-object   = { workspace = true }

[dev-dependencies]
# § T11-D286 (W-E5-3) — the cap-verify JIT-integration test in `tests/`
# loads `__cssl_cap_verify` from cssl-rt's link surface. Dev-dep only ;
# production builds link cssl-rt at the host-binary level.
cssl-rt = { path = "../cssl-rt" }

[lints]
workspace = true
