[package]
name                   = "cssl-cgen-cpu-cranelift"
description            = "CSSLv3 stage0 — Cranelift-based CPU codegen (stage0 throwaway)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir           = { path = "../cssl-mir" }
blake3             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
cranelift-codegen  = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module   = { workspace = true }
cranelift-jit      = { workspace = true }
cranelift-native   = { workspace = true }

[lints]
workspace = true
