[package]
name                   = "cssl-cgen-cpu-x64"
description            = "CSSLv3 stage1+ — unified hand-rolled native x86-64 backend (G-axis : ABI + isel + regalloc + encoder + objemit + csslc-dispatch facade)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

# § T11-D95 (G-axis integration) : unified hand-rolled native x86-64 backend.
# Combines T11-D83 (G1 isel) + T11-D84 (G2 regalloc) + T11-D85 (G3 ABI) +
# T11-D86 (G4 encoder) + T11-D87 (G5 object emitter) + T11-D88 (G6 csslc
# dispatch facade) into a single coherent crate, with each slice's surface
# preserved as a submodule sibling-type per the slice handoff invariants.
#
# § ZERO RUNTIME DEPS BEYOND `cssl-mir` + `thiserror`. No assembly, no FFI,
# no LLVM, no Cranelift, no `cranelift-object` — the bespoke trajectory per
# `specs/14_BACKEND.csl § OWNED x86-64 BACKEND`.
#
# § ATTESTATION (PRIME_DIRECTIVE.md § 11) : There was no hurt nor harm in
# the making of this, to anyone / anything / anybody.

[dependencies]
cssl-mir  = { path = "../cssl-mir" }
thiserror = { workspace = true }

[lints]
workspace = true
