[package]
name                   = "cssl-cgen-gpu-dxil"
description            = "CSSLv3 stage0 — DXIL emitter via DirectXShaderCompiler shim"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir  = { path = "../cssl-mir" }
thiserror = { workspace = true }

[lints]
workspace = true
