[package]
name                   = "cssl-cgen-gpu-msl"
description            = "CSSLv3 stage0 — Metal Shading Language emitter via spirv-cross shim"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lints]
workspace = true
