[package]
name                   = "cssl-cgen-gpu-spirv"
description            = "CSSLv3 stage0 — rspirv SPIR-V module emitter + spirv-val gate"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lints]
workspace = true
