[package]
name                   = "cssl-cgen-gpu-spirv"
description            = "CSSLv3 stage0 — rspirv SPIR-V module emitter + spirv-val gate"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir         = { path = "../cssl-mir" }
cssl-autodiff    = { path = "../cssl-autodiff" }
# § T11-W18-L7 : pair with cssl-cgen-spirv (from-scratch · proprietary · zero
# external dep) for the substrate-kernel emit path. The substrate-kernel module
# composes a MirFunc-shaped substrate-kernel + drives `lower_function` to emit
# canonical SPIR-V binary words consumable by ash-direct vulkan dispatch (no
# naga · no WGSL · no wgpu in the chain).
cssl-cgen-spirv  = { path = "../cssl-cgen-spirv" }
thiserror        = { workspace = true }
# T11-D34 : pure-Rust SPIR-V binary emission + validation-via-round-trip.
# Closes the T10-phase-2 deferred "rspirv FFI integration" note. The binary
# emitter lives in `binary_emit.rs` (parallel to the text emitter in `emit.rs`) ;
# tests load the emitted binary back through `rspirv::dr::load_words` to prove
# the byte-exact output is structurally valid SPIR-V. This is the D32-parallel
# pattern (naga-validates-WGSL → rspirv-validates-SPIR-V) specialized to the
# binary format where pure-Rust round-trip IS the validation.
#
# T11-D72 (S6-D1) : real SPIR-V kernel body emission lives in `body_emit.rs`
# alongside the existing void-fn emitter. The body emitter consumes
# structured-CFG-validated MIR (D5 marker contract via cssl_mir::structured_cfg)
# and lowers each MirOp to its rspirv counterpart (OpFAdd / OpIAdd /
# OpSelectionMerge / OpLoopMerge / OpLoad / OpStore / OpReturn / etc).
rspirv = { workspace = true }

[lints]
workspace = true
