[package]
name                   = "cssl-cgen-gpu-wgsl"
description            = "CSSLv3 stage0 — WebGPU Shading Language emitter via Tint shim"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
cssl-mir  = { path = "../cssl-mir" }
thiserror = { workspace = true }

[dev-dependencies]
# T11-D32 : validate emitted WGSL via naga's wgsl-in frontend.
naga = { workspace = true }

[lints]
workspace = true
